--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,8 @@
 #
 default: &default
   adapter: postgresql
+  host: localhost
+  username: postgres
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
